force-app/main/default/objects/Activity_Record_Type_Tracking__c/Activity_Record_Type_Tracking__c.object-meta.xml
<CustomObject>
    <label>Activity Record Type Tracking</label>
    <nameField>
        <displayFormat>ARTT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Record Type Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>