force-app/main/default/objects/Activity_Record_Type_Tracking__c/fields/Activity_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Activity_Configuration__c</fullName>
    <label>Activity Configuration</label>
    <referenceTo>Activity_Configuration__c</referenceTo>
    <relationshipLabel>Activity Record Type Trackings</relationshipLabel>
    <relationshipName>RT_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>