force-app/main/default/objects/Activity_Record_Type_Tracking__c/fields/RecordType_Id__c.field-meta.xml
<CustomField>
    <fullName>RecordType_Id__c</fullName>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>