force-app/main/default/objects/Activity_Record_Type_Tracking__c/fields/Statuses__c.field-meta.xml
<CustomField>
    <fullName>Statuses__c</fullName>
    <label>Statuses</label>
    <length>255</length>
    <type>Text</type>
</CustomField>